--- a/app/views/manuscripts/index.html.erb
+++ b/app/views/manuscripts/index.html.erb
@@ -1,29 +1,39 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Manuscripts</h1>
+<div class="p-5 container">
+  <div class="row">
+    <div class="col">
+      <h2><b>Manuscripts</b></h2>
+    </div>
+    <div class="col">
+      <%= link_to 'New Manuscript', new_manuscript_path, class: "btn btn-success float-right" %>
+    </div>
+  </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Shelfmark</th>
-      <th>Quire count</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @manuscripts.each do |manuscript| %>
+  <div class="table-wrapper">
+    <table class="table table-hover">
+      <thead>
       <tr>
-        <td><%= manuscript.shelfmark %></td>
-        <td><%= manuscript.quire_count %></td>
-        <td><%= link_to 'Show', manuscript %></td>
-        <td><%= link_to 'Edit', edit_manuscript_path(manuscript) %></td>
-        <td><%= link_to 'Destroy', manuscript, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Shelfmark</th>
+        <th>Quire count</th>
+        <th>Actions</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+      </thead>
 
+      <tbody>
+      <% @manuscripts.each do |manuscript| %>
+        <tr>
+          <td><%= manuscript.shelfmark %></td>
+          <td><%= manuscript.quire_count %></td>
+          <td>
+            <%= link_to '<i class="fas fa-eye"></i>'.html_safe, manuscript, class: "btn btn-outline-success" %>
+            <%= link_to '<i class="fas fa-pen-fancy"></i>'.html_safe, edit_manuscript_path(manuscript), class: "btn btn-outline-primary" %>
+            <%= link_to '<i class="fas fa-trash"></i>'.html_safe, manuscript, class: "btn btn-outline-danger", method: :delete, data: {confirm: 'Are you sure?'} %>
+          </td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
 <br>
-
-<%= link_to 'New Manuscript', new_manuscript_path %>
