--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<section class="form-auth text-center">
+<div class="container form-auth text-center mt-4">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
     <h1 class="h3 mb-3 font-weight-normal">Please sign up</h1>
@@ -8,4 +8,4 @@
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
   <% end %>
   <%= render "devise/shared/links" %>
-</section>
+</div>
