--- a/app/views/manuscripts/_form.html.erb
+++ b/app/views/manuscripts/_form.html.erb
@@ -13,15 +13,15 @@
 
   <div class="field">
     <%= form.label :shelfmark %>
-    <%= form.text_field :shelfmark %>
+    <%= form.text_field :shelfmark, class: "form-control" %>
   </div>
 
   <div class="field">
     <%= form.label :quire_count %>
-    <%= form.number_field :quire_count %>
+    <%= form.number_field :quire_count, class: "form-control" %>
   </div>
 
-  <div class="actions">
-    <%= form.submit %>
+  <div class="actions pt-2">
+    <%= form.submit 'Create Manuscript', class: "form-control btn btn-lg btn-primary btn-block" %>
   </div>
 <% end %>
