--- a/app/views/manuscripts/edit.html.erb
+++ b/app/views/manuscripts/edit.html.erb
@@ -1,6 +1,9 @@
-<h1>Editing Manuscript</h1>
+<div class="container">
+  <h1>Editing Manuscript</h1>
 
-<%= render 'form', manuscript: @manuscript %>
+  <%= render 'form', manuscript: @manuscript %>
 
-<%= link_to 'Show', @manuscript %> |
-<%= link_to 'Back', manuscripts_path %>
+  <%= link_to 'Show', @manuscript %> |
+  <%= link_to 'Back', manuscripts_path %>
+</div>
+
