--- a/app/views/manuscripts/new.html.erb
+++ b/app/views/manuscripts/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Manuscript</h1>
+<div class="container mt-4">
+  <h1>New Manuscript</h1>
 
-<%= render 'form', manuscript: @manuscript %>
+  <%= render 'form', manuscript: @manuscript %>
 
-<%= link_to 'Back', manuscripts_path %>
+  <%= link_to 'Back', manuscripts_path %>
+</div>
