--- a/app/views/layouts/nav/_public.html.erb
+++ b/app/views/layouts/nav/_public.html.erb
@@ -1,27 +1,10 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="manuscripts#index">VisColl</a> <%# TODO - check for user signed in, the href is broken %>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <%= link_to "VisColl", manuscripts_path, class: "navbar-brand" %>
 
     <div class="collapse navbar-collapse container-md" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Export</a>
-          <div class="dropdown-menu" aria-labelledby="dropdown01">
-            <a class="dropdown-item" href="#">XML</a>
-            <a class="dropdown-item" href="#">Manuscript Diagram</a>
-            <a class="dropdown-item" href="#">Quire Diagrams</a>
-          </div>
-        </li>
+        <!-- navbar items go here -->
       </ul>
       <ul class="navbar-nav ml-auto">
         <% if account_signed_in? %>
