rendered the quire table

--- a/app/views/manuscripts/show.html.erb
+++ b/app/views/manuscripts/show.html.erb
@@ -31,4 +31,10 @@
       <%= render 'quire_table' %>
     </div>
   </div>
+
+  <div class="row">
+    <div class="col">
+      <%= render 'quire_table' %>
+    </div>
+  </div>
 </div>
