--- a/app/views/manuscripts/index.html.erb
+++ b/app/views/manuscripts/index.html.erb
@@ -38,4 +38,36 @@
     </table>
   </div>
 </div>
-<br>
+
+<div class="container">
+  <!-- Button to Open the Modal -->
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#newManuscriptModal">
+    New Manuscript
+  </button>
+
+  <!-- The Modal -->
+  <div class="modal" id="newManuscriptModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h4 class="modal-title">New Manuscript</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+
+        <!-- Modal body -->
+        <div class="modal-body">
+          <%= render 'form', manuscript: Manuscript.new %>
+        </div>
+
+        <!-- Modal footer -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+</div>
