--- a/app/views/manuscripts/_quire_table.html.erb
+++ b/app/views/manuscripts/_quire_table.html.erb
@@ -9,9 +9,9 @@
     </thead>
 
     <tbody>
-    <% @manuscript.quires.each do |quire| %>
+    <% @manuscript.quires.each_with_index do |quire, index| %>
       <tr>
-        <td><%= quire.id %></td>
+        <td><%= index + 1 %></td>
         <td><%= quire.leaf_count %></td>
         <td>
           <%= link_to '<i class="fas fa-eye"></i>'.html_safe, manuscript_quire_path(@manuscript, quire), class: "btn btn-outline-success" %>
