--- a/app/views/manuscripts/show.html.erb
+++ b/app/views/manuscripts/show.html.erb
@@ -24,14 +24,15 @@
     <div class="col">
       <strong>Quires:</strong>
       <%= @manuscript.quires.count %>
+      <p id="notice"><%= notice %></p>
+      <%# link_to 'New Quire', new_manuscript_quire_path(@manuscript), class: "btn btn-success" %>
+      <button type="button" class="btn btn-success float-right" data-toggle="modal" data-target="#newQuireModal">
+        New Quire
+      </button>
     </div>
   </div>
 
-  <div class="row mt-2">
-    <div class="col">
-      <%= link_to 'New Quire', new_manuscript_quire_path(@manuscript), class: "btn btn-success" %>
-    </div>
-  </div>
+  <%= render 'quires/new_quire_modal' %>
 
   <div class="row">
     <div class="col">
