quires are automatically created as children of the manuscript, quire count is displaying properly

--- a/app/views/manuscripts/_new_manuscript_modal.html.erb
+++ b/app/views/manuscripts/_new_manuscript_modal.html.erb
@@ -1,4 +1,4 @@
-<div class="modal" id="newManuscriptModal">
+<div class="modal fade" id="newManuscriptModal">
   <div class="modal-dialog">
     <div class="modal-content">
 
