--- a/app/views/quires/_new_quire_modal.html.erb
+++ b/app/views/quires/_new_quire_modal.html.erb
@@ -1,4 +1,4 @@
-<div class="modal" id="newQuireModal">
+<div class="modal fade" id="newQuireModal">
   <div class="modal-dialog">
     <div class="modal-content">
 
