--- a/app/views/manuscripts/index.html.erb
+++ b/app/views/manuscripts/index.html.erb
@@ -18,8 +18,9 @@
     <table class="table table-hover">
       <thead>
       <tr>
+        <th>Name</th>
         <th>Shelfmark</th>
-        <th>Quire count</th>
+        <th>Quires</th>
         <th>Actions</th>
       </tr>
       </thead>
@@ -27,8 +28,9 @@
       <tbody>
       <% @manuscripts.each do |manuscript| %>
         <tr>
+          <td><%= manuscript.name %></td>
           <td><%= manuscript.shelfmark %></td>
-          <td><%= manuscript.quire_count %></td>
+          <td><%= manuscript.quires.count %></td>
           <td>
             <%= link_to '<i class="fas fa-eye"></i>'.html_safe, manuscript, class: "btn btn-outline-success" %>
             <%= link_to '<i class="fas fa-pen-fancy"></i>'.html_safe, edit_manuscript_path(manuscript), class: "btn btn-outline-primary" %>
