--- a/app/views/manuscripts/index.html.erb
+++ b/app/views/manuscripts/index.html.erb
@@ -16,6 +16,7 @@
   </div>
 
   <%= render 'new_manuscript_modal' %>
+  <%= render 'edit_manuscript_modal' %>
 
   <div class="table-wrapper">
     <table class="table table-hover">
@@ -36,7 +37,7 @@
           <td><%= manuscript.quires.count %></td>
           <td>
             <%= link_to '<i class="fas fa-eye"></i>'.html_safe, manuscript, class: "btn btn-outline-success" %>
-            <%= link_to '<i class="fas fa-pen-fancy"></i>'.html_safe, edit_manuscript_path(manuscript), class: "btn btn-outline-primary" %>
+            <%= link_to '<i class="fas fa-pen-fancy"></i>'.html_safe, edit_manuscript_path(manuscript.id), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#editManuscriptModal'} %>
             <%= link_to '<i class="fas fa-trash"></i>'.html_safe, manuscript, class: "btn btn-outline-danger", method: :delete, data: {confirm: 'Are you sure?'} %>
           </td>
         </tr>
