leaves created as children of quire based on leaf_count, displaying list of leaves on quire#show, breadcrumbs update to reflect this new resource

--- a/app/views/manuscripts/_edit_manuscript_modal.html.erb
+++ b/app/views/manuscripts/_edit_manuscript_modal.html.erb
@@ -9,7 +9,7 @@
       </div>
 
       <!-- Modal body -->
-      <div class="modal-body", id="x">
+      <div id="modal-body">
         <%# render 'form', manuscript: @manuscript %>
       </div>
 
