--- a/app/views/manuscripts/_quire_table.html.erb
+++ b/app/views/manuscripts/_quire_table.html.erb
@@ -12,7 +12,7 @@
     <% @manuscript.quires.each_with_index do |quire, index| %>
       <tr>
         <td><%= index + 1 %></td>
-        <td><%= quire.leaf_count %></td>
+        <td><%= quire.leaves.count %></td>
         <td>
           <%= link_to '<i class="fas fa-eye"></i>'.html_safe, manuscript_quire_path(@manuscript, quire), class: "btn btn-outline-success" %>
           <%= link_to '<i class="fas fa-pen-fancy"></i>'.html_safe, edit_manuscript_quire_path(@manuscript, quire), class: "btn btn-outline-primary" %>
