--- a/app/views/quires/_leaf_table.html.erb
+++ b/app/views/quires/_leaf_table.html.erb
@@ -12,7 +12,11 @@
     <% @quire.leaves.each_with_index do |leaf, index| %>
       <tr>
         <td><%= index + 1 %></td>
-        <td><%= leaf.single? %></td>
+        <% if leaf.single? %>
+          <td>Yes</td>
+        <% else %>
+          <td>No</td>
+        <% end %>
         <td>
           <%= link_to '<i class="fas fa-eye"></i>'.html_safe, quire_leaf_path(@quire, leaf), class: "btn btn-outline-success" %>
           <%= link_to '<i class="fas fa-pen-fancy"></i>'.html_safe, edit_quire_leaf_path(@quire, leaf), class: "btn btn-outline-primary" %>
