modal showing for edit manuscript, quire generation is broken upon manuscript creation

--- a/app/views/manuscripts/edit.js.erb
+++ b/app/views/manuscripts/edit.js.erb
@@ -1,1 +1,2 @@
-$("#editManuscriptModal.modal-body").html("<%= escape_javascript(render 'manuscripts/form', manuscript: @manuscript) %>");
+$("#editManuscriptModal").find(".modal-content").html("<%= escape_javascript(render 'manuscripts/form', manuscript: @manuscript) %>")
+$("#editManuscriptModal").modal('show');
