--- a/app/views/manuscripts/_edit_manuscript_modal.html.erb
+++ b/app/views/manuscripts/_edit_manuscript_modal.html.erb
@@ -1,23 +1,6 @@
-<div class="modal fade" id="editManuscriptModal">
-  <div class="modal-dialog">
+<div id="editManuscriptModal" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
     <div class="modal-content">
-
-      <!-- Modal Header -->
-      <div class="modal-header">
-        <h4 class="modal-title">Edit Manuscript</h4>
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-      </div>
-
-      <!-- Modal body -->
-      <div id="modal-body">
-        <%# render 'form', manuscript: @manuscript %>
-      </div>
-
-      <!-- Modal footer -->
-      <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-      </div>
-
     </div>
   </div>
 </div>
