removed quire_count property from database and commented after_save :create_quires logic

--- a/app/views/manuscripts/_form.html.erb
+++ b/app/views/manuscripts/_form.html.erb
@@ -22,16 +22,11 @@
   </div>
 
   <div class="field">
-    <%= form.label :quire_count %>
-    <%= form.number_field :quire_count, class: "form-control" %>
-  </div>
-
-  <div class="field">
     <%= form.label :date %>
     <%= form.number_field :date, class: "form-control" %>
   </div>
 
   <div class="actions pt-2">
-    <%= form.submit 'Create Manuscript', class: "form-control btn btn-lg btn-primary btn-block" %>
+    <%= form.submit class: "form-control btn btn-lg btn-primary btn-block" %>
   </div>
 <% end %>
