--- a/app/views/manuscripts/index.html.erb
+++ b/app/views/manuscripts/index.html.erb
@@ -2,45 +2,15 @@
   <%= render 'manuscripts/bread_crumbs' %>
   <div class="row">
     <div class="col">
-      <h2><b>Manuscripts</b></h2>
+      <h1>Manuscripts</h1>
     </div>
     <div class="col">
       <% if account_signed_in? %>
-        <%= link_to 'New Manuscript', "#", class: "btn btn-success float-right", data: {toggle: "modal", target: "#newManuscriptModal"} %>
+        <%= link_to 'New Manuscript', new_manuscript_path, class: "btn btn-success float-right" %>
       <% else %>
         <%= link_to 'Log In to Create a New Manuscript', new_account_session_path, class: "btn btn-success float-right" %>
       <% end %>
     </div>
   </div>
-
-  <%= render 'new_manuscript_modal' %>
-  <%= render 'edit_manuscript_modal' %>
-
-  <div class="table-wrapper">
-    <table class="table table-hover">
-      <thead>
-      <tr>
-        <th>Name</th>
-        <th>Shelfmark</th>
-        <th>Quires</th>
-        <th>Actions</th>
-      </tr>
-      </thead>
-
-      <tbody>
-      <% @manuscripts.each do |manuscript| %>
-        <tr>
-          <td><%= manuscript.name %></td>
-          <td><%= manuscript.shelfmark %></td>
-          <td><%= manuscript.quires.count %></td>
-          <td>
-            <%= link_to '<i class="fas fa-eye"></i>'.html_safe, manuscript, class: "btn btn-outline-success" %>
-            <%= link_to '<i class="fas fa-pen-fancy"></i>'.html_safe, edit_manuscript_path(manuscript.id), {:remote => true, 'data-toggle' => "modal", 'data-target' => '#editManuscriptModal', class: "btn btn-outline-warning"} %>
-            <%= link_to '<i class="fas fa-trash"></i>'.html_safe, manuscript, class: "btn btn-outline-danger", method: :delete, data: {confirm: 'Are you sure?'} %>
-          </td>
-        </tr>
-      <% end %>
-      </tbody>
-    </table>
-  </div>
+  <%= render 'manuscript_table' %>
 </div>
