leaves created on quire creation

--- a/app/views/manuscripts/edit.html.erb
+++ b/app/views/manuscripts/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Editing Manuscript</h1>
+  <h1>Edit <%= @manuscript.name %></h1>
 
   <%= render 'form', manuscript: @manuscript %>
 
