--- a/app/views/manuscripts/_quire_table.html.erb
+++ b/app/views/manuscripts/_quire_table.html.erb
@@ -11,7 +11,7 @@
     <tbody>
     <% @manuscript.quires.each_with_index do |quire, index| %>
       <tr>
-        <td><%= index + 1 %></td>
+        <td><%= @quire_number = index + 1 %></td>
         <td><%= quire.leaves.count %></td>
         <td>
           <%= link_to '<i class="fas fa-eye"></i>'.html_safe, manuscript_quire_path(@manuscript, quire), class: "btn btn-outline-success" %>
