--- a/app/views/manuscripts/_quire_table.html.erb
+++ b/app/views/manuscripts/_quire_table.html.erb
@@ -5,19 +5,21 @@
       <th>Quire number</th>
       <th>Leaf count</th>
       <th>Actions</th>
+      <th>ID</th>
     </tr>
     </thead>
 
     <tbody>
     <% @manuscript.quires.each_with_index do |quire, index| %>
       <tr>
-        <td><%= @quire_number = index + 1 %></td>
+        <td><%= index + 1 %></td>
         <td><%= quire.leaves.count %></td>
         <td>
           <%= link_to '<i class="fas fa-eye"></i>'.html_safe, manuscript_quire_path(@manuscript, quire), class: "btn btn-outline-success" %>
           <%= link_to '<i class="fas fa-pen-fancy"></i>'.html_safe, edit_manuscript_quire_path(@manuscript, quire), class: "btn btn-outline-primary" %>
           <%= link_to '<i class="fas fa-trash"></i>'.html_safe, manuscript_quire_path(@manuscript, quire), class: "btn btn-outline-danger", method: :delete, data: {confirm: 'Are you sure?'} %>
         </td>
+        <td><%= quire.xml_id %></td>
       </tr>
     <% end %>
     </tbody>
