--- a/app/views/quires/show.html.erb
+++ b/app/views/quires/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
   <%= render 'bread_crumbs' %>
-  <h3>Quire: <%= @quire.id %></h3>
+  <h3>Quire <%= @quire.position %></h3>
   <%= render 'leaf_table' %>
 </div>
