--- a/app/views/quires/_bread_crumbs.html.erb
+++ b/app/views/quires/_bread_crumbs.html.erb
@@ -5,5 +5,5 @@
 <% end %>
 <% unless @quire.nil? -%>
   |
-  <%= link_to "Quire", @quire %>
+  <%= link_to "Quire #{@quire.position}", @quire %>
 <% end %>
